--- a/berliner_mauer.html
+++ b/berliner_mauer.html
@@ -39,18 +39,23 @@
         </div>
         <section class="info">
             <p>
-                Em português, Muro de Berlim. Durante a 2ª Guerra Mundial, Berlim foi um grande alvo, a cidade ficou gravemente
+                Em português, Muro de Berlim. Durante a 2ª Guerra Mundial, Berlim foi um grande alvo, a cidade ficou
+                gravemente
                 destruída e muitos habitantes morreram.
-                A Alemanha então, foi dividida em dois países, Alemanha Oriental (União Soviética: comunismo) e Alemanha Ocidental
+                A Alemanha então, foi dividida em dois países, Alemanha Oriental (União Soviética: comunismo) e Alemanha
+                Ocidental
                 (democracia capitalista).
-                Com isso, milhões de pessoas fugiram de Berlim Oriental para Berlim Ocidental entre 1949 e 1961, a fim de evitar essas fugas,
-                a Alemanha Oriental construiu o Muro de Berlim, separando Berlim Ocidental e Oriental por cerca de 30 anos.
-                A queda do Muro de Berlim começou a dar início em 1989, quando o governo comunista foi extinto ali. Já em 1990, as duas
+                Com isso, milhões de pessoas fugiram de Berlim Oriental para Berlim Ocidental entre 1949 e 1961, a fim
+                de evitar essas fugas,
+                a Alemanha Oriental construiu o Muro de Berlim, separando Berlim Ocidental e Oriental por cerca de 30
+                anos.
+                A queda do Muro de Berlim começou a dar início em 1989, quando o governo comunista foi extinto ali. Já
+                em 1990, as duas
                 partes da Alemanha e Berlim foram reunidas novamente tornando novamente Berlim a capital da Alemanha.
             </p>
             <div class="half_section">
                 <h3> <i class="fa-solid fa-sack-dollar"></i> Preços dos ingressos:</h3>
-                <p>Gratuíto para todos</p>
+                <p>Gratuito para todos</p>
 
                 <h3> <i class="fa-solid fa-clock"></i> horário de funcionamento:</h3>
                 <p>Todos os dias, 24h por dia.</p>
@@ -58,50 +63,51 @@
                 <h3><i class="fa-solid fa-comments"></i> avaliações:</h3>
                 <div class="avaliation">
                     <div class="avaliation_img">
-                        <img class="person_img" src="./images/pontosturisticos/avaliaçao.jpg" alt="">
+                        <img class="person_img" src="./images/pontosturisticos/avaliaçaoberliner.jpg" alt="">
                     </div>
                     <div class="avaliation_content">
                         <div class="avaliation_text">
-                        <p class="person_name">Clarice Freumann:</p>
-                        <p>O Bode museum é um dos museus que compõem a Ilha dos museus, em Berlim. Pra mim é o mais
-                            rico! Possui um acervo da idade média e da fase gótica, riquíssimo! Além de tudo, o prédio é
-                            belíssimo! Dos três museus q visitei, esse é o mais bonito!!
-                        </p>
-                        
-                        <p class="grade">
-                            Nota:
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                        </p>
-                    </div></div>
+                            <p class="person_name">Mara Hernandez:</p>
+                            <p>Como não se emocionar num local que nos leva a um passado recente onde a cidade era
+                                dividida e mtas familias se perderam e o sofrimento da separação se impunha.
+                                Para mim foi um dos marcos mais emocionantes da cidade de Berlim.
+                            </p>
+
+                            <p class="grade">
+                                Nota:
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </p>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="avaliation">
                     <div class="avaliation_img">
-                        <img class="person_img" src="./images/pontosturisticos/anonimo.jpg" alt="">
+                        <img class="person_img" src="./images/pontosturisticos/avaliaçãoberliner2.jpg" alt="">
                     </div>
                     <div class="avaliation_content">
                         <div class="avaliation_text">
-                        <p class="person_name">Anônimo:</p>
-                        <p>
-                            Bilhete único é caro, 12 euros, mas valeu a pena com todo o acervo que o museu oferece. Não
-                            apenas as obras, o edifício é maravilhoso.
-                        </p>
-                        <p class="grade">
-                            Nota: 
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star gray-star"></i>
-                        </p>
+                            <p class="person_name">Andrew Ferreira:</p>
+                            <p>
+                                Visita obrigatória em Berlin. Local com muita informação sobre o Holocausto, incluindo mapas e cronologia.
+                            </p>
+                            <p class="grade">
+                                Nota:
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </p>
+                        </div>
                     </div>
-                </div></div>
+                </div>
             </div>
-            
+
             <div class="section_spacing"></div>
             <div class="half_section">
                 <h3> <i class="fa-solid fa-square-poll-horizontal"></i> site oficial:</h3>
@@ -112,7 +118,9 @@
                 <p>O muro de Berlim fica localizado no famoso East Side Gallery</p>
                 <p>Endereço: Mühlenstraße 3-100, 10243 Berlin, Alemanha.</p>
 
-                    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d77724.51441570539!2d13.364028946694079!3d52.49921127476096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a851642fa10281%3A0xa1a6d660f47ed1e!2sBerliner%20Mauer!5e0!3m2!1spt-BR!2sbr!4v1647554027252!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy"></iframe>
+                <iframe class="mapa"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d77724.51441570539!2d13.364028946694079!3d52.49921127476096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a851642fa10281%3A0xa1a6d660f47ed1e!2sBerliner%20Mauer!5e0!3m2!1spt-BR!2sbr!4v1647554027252!5m2!1spt-BR!2sbr"
+                    allowfullscreen="" loading="lazy"></iframe>
             </div>
 
 
