--- a/bode_museum.html
+++ b/bode_museum.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+    <img class="banner_img" src="./images/pontosturisticos/rodapé1.png" alt="">
     <div class="header">
         <div class="box_logo"> <img src="./images/logo logo.png"></div>
         <nav class="menu" id="menu">
@@ -62,7 +62,29 @@
                 </p>
 
                 <h3><i class="fa-solid fa-comments"></i> avaliações:</h3>
+
                 <div class="avaliation">
+                    <div class="avaliation_img">
+                        <img class="person_img" src="./images/pontosturisticos/avaliacaogambito.jpeg" alt="">
+                    </div>
+                    <div class="avaliation_content">
+                        <div class="avaliation_text">
+                        <p class="person_name">Beth Harmon:</p>
+                        <p> Ótimo lugar para tomar um cafézinho, recomendo demais o Café im Bode-Museum após uma partida de xadrez hehehe
+                        </p>
+                        
+                        <p class="grade">
+                            Nota:
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </p>
+                    </div></div>
+                </div>
+
+<div class="avaliation">
                     <div class="avaliation_img">
                         <img class="person_img" src="./images/pontosturisticos/avaliaçao.jpg" alt="">
                     </div>
