--- a/brandemburger_tor.html
+++ b/brandemburger_tor.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brandemburger Tor</title>
+    <title>Brandenburger Tor</title>
     <link rel="stylesheet" href="./css/tourist_spot.css">
     <link rel="shortcut icon" href="./images/favicon.png">
     <script src="https://kit.fontawesome.com/ea0e8d9cb6.js" crossorigin="anonymous"></script>
@@ -30,7 +30,7 @@
 
     <div class="container">
         <div class="title">
-            <h1>brandemburger tor</h1>
+            <h1>brandenburger tor</h1>
         </div>
         <div class="images">
             <img class="spot_images" src="./images/pontosturisticos/brandenburger1.webp" alt="">
@@ -51,11 +51,11 @@
                 se pode ver hoje em dia é uma cópia feita em Berlim ocidental
                 em 1969, já que a original foi destruída durante a Segunda
                 Guerra Mundial. Se tornou um dos principais ícones da capital
-                alemã e o símbolo do triunfo da paz sobre as armas. 
+                alemã e o símbolo do triunfo da paz sobre as armas.
             </p>
             <div class="half_section">
                 <h3> <i class="fa-solid fa-sack-dollar"></i> Preços dos ingressos:</h3>
-                <p>Gratuíto para todos</p>
+                <p>Gratuito para todos</p>
 
                 <h3> <i class="fa-solid fa-clock"></i> horário de funcionamento:</h3>
                 <p>24 horas por dia.</p>
@@ -72,25 +72,25 @@
                 <h3><i class="fa-solid fa-comments"></i> avaliações:</h3>
                 <div class="avaliation">
                     <div class="avaliation_img">
-                        <img class="person_img" src="./images/pontosturisticos/avaliaçao.jpg" alt="">
+                        <img class="person_img" src="./images/pontosturisticos/avaliaçaobrandemburger.jpg" alt="">
                     </div>
                     <div class="avaliation_content">
                         <div class="avaliation_text">
-                        <p class="person_name">Clarice Freumann:</p>
-                        <p>O Bode museum é um dos museus que compõem a Ilha dos museus, em Berlim. Pra mim é o mais
-                            rico! Possui um acervo da idade média e da fase gótica, riquíssimo! Além de tudo, o prédio é
-                            belíssimo! Dos três museus q visitei, esse é o mais bonito!!
-                        </p>
-                        
-                        <p class="grade">
-                            Nota:
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                        </p>
-                    </div></div>
+                            <p class="person_name">Antônio Perez:</p>
+                            <p>Um dos pontos mais famosos de Berlim. Vale à pena a visita. Aproveite e visite o prédio
+                                do Parlamento e monumento do holocausto que fica praticamente ao lado.
+                            </p>
+
+                            <p class="grade">
+                                Nota:
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </p>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="avaliation">
@@ -99,23 +99,23 @@
                     </div>
                     <div class="avaliation_content">
                         <div class="avaliation_text">
-                        <p class="person_name">Anônimo:</p>
-                        <p>
-                            Bilhete único é caro, 12 euros, mas valeu a pena com todo o acervo que o museu oferece. Não
-                            apenas as obras, o edifício é maravilhoso.
-                        </p>
-                        <p class="grade">
-                            Nota: 
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star gray-star"></i>
-                        </p>
+                            <p class="person_name">Anônimo:</p>
+                            <p>
+                            Fiquei decepcionado com o tamanho do portão. Não sei porque imaginava maior. De qualquer forma atração interessante.
+                            </p>
+                            <p class="grade">
+                                Nota:
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star gray-star"></i>
+                                <i class="fa-solid fa-star gray-star"></i>
+                            </p>
+                        </div>
                     </div>
-                </div></div>
+                </div>
             </div>
-            
+
             <div class="section_spacing"></div>
             <div class="half_section">
                 <h3> <i class="fa-solid fa-square-poll-horizontal"></i> site oficial:</h3>
@@ -126,7 +126,9 @@
                 <p><u>Metrô:</u> Brandenburger Tor, linha U55.</p>
                 <p><u>Trem:</u> Brandenburger Tor, linhas S1, S2 e S25.</p>
 
-                <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d155593.8609807529!2d13.076319825496972!3d52.45823696353942!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a851c428a92a43%3A0x784cfd724198fb47!2sBrandenburger%20Tor!5e0!3m2!1spt-BR!2sbr!4v1647556520719!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy"></iframe>
+                <iframe class="mapa"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d155593.8609807529!2d13.076319825496972!3d52.45823696353942!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a851c428a92a43%3A0x784cfd724198fb47!2sBrandenburger%20Tor!5e0!3m2!1spt-BR!2sbr!4v1647556520719!5m2!1spt-BR!2sbr"
+                    allowfullscreen="" loading="lazy"></iframe>
             </div>
 
 
