--- a/index.html
+++ b/index.html
@@ -65,17 +65,29 @@
                          <div class="carousel-item active">
                               <img src="./images/statistic.jpeg" class="img-carousel" alt="Poulação de Berlim">
                               <div class="carousel-caption berlim-captions d-none d-md-block">
-                                   <h5>SOBRE BERLIM</h5>
-                                   <p>Berlim, capital e maior cidade da Alemanha fundada no inicio do século XII, foi
-                                        cidade-sede do reino germânico da Prússia durante os séculos XVIII e XIX. Berlim
-                                        é influenciada por um clima temperado sazonal. Cerca de um terço da área da
+                                   <h5> <i class="fa-solid fa-earth-europe"></i> SOBRE BERLIM <i
+                                             class="fa-solid fa-earth-europe"></i></h5>
+                                   <p>Berlim, capital e maior cidade da Alemanha fundada no início do século XII.
+                                        É influenciada por um clima temperado sazonal. Cerca de um terço da área da
                                         cidade é composta por florestas, parques, jardins, rios e lagos.</p>
+                                   <p> Possui algumas recordações da história turbulenta da cidade, sendo
+                                        as principais: O Memorial
+                                        do Holocausto e as ruínas do Muro de Berlim. Além do Portão de Brandemburgo
+                                        construído no século XVIII, que foi usado como divisão de fronteiras durante a
+                                        Guerra Fria.</p>
+                                   <p> Berlim foi cenário para muitos
+                                        filmes e séries, como alguns exemplos temos: Adeus Lenin, de 2003;
+                                        Praia do Futuro, de 2014 (é brasileiro viu!); e sem esquecer da série que foi
+                                        usada como base para nosso site né? "O Gambito da Rainha", que lançou
+                                        em 2020 na Netflix. Clica na setinha direita para saber mais sobre a
+                                        série!</p>
+
                                    <div class="berlim-infos">
                                         <div class="info">
                                              <i class="fa-solid fa-people-group"></i>
                                              <div class="info-body">
                                                   <h6>POPULAÇÃO</h6>
-                                                  <p>Aprox.3,645 mi</p>
+                                                  <p>Aprox. 3,645 mi</p>
                                                   <p>(Fonte: Eurostat / 2015)</p>
                                              </div>
                                         </div>
@@ -83,13 +95,14 @@
                                              <i class="fa-solid fa-euro-sign"></i>
                                              <div class="info-body">
                                                   <h6>MOEDA LOCAL</h6>
-                                                  <p>Euro $$</p>
+                                                  <p>(€) Euro
+                                                  </p>
                                              </div>
                                         </div>
                                         <div class="info">
                                              <i class="fa-solid fa-temperature-low"></i>
                                              <div class="info-body">
-                                                  <h6>TEMPERATURA</h6>
+                                                  <h6>TEMPERATURA MÉDIA</h6>
                                                   <p>9°C</p>
                                              </div>
                                         </div>
@@ -115,7 +128,8 @@
                               <img src="./images/queensGambit.jpg" class="img-carousel" alt="...">
                               <div class="carousel-caption d-none d-md-block">
                                    <div class="queensText">
-                                        <h5>SOBRE O GAMBITO DA RAINHA</h5>
+                                        <h5> <i class="fa-solid fa-chess-queen"></i> SOBRE O GAMBITO DA RAINHA <i
+                                                  class="fa-solid fa-chess-queen"></i></h5>
                                         <p> É uma série original Netflix, foi lançada em 23 de
                                              Outubro de 2020 e conta a história de uma órfã prodígio do xadrez (Beth
                                              Harmon) que luta contra vícios enquanto enfrenta os maiores enxadristas do
@@ -177,9 +191,11 @@
                     <p class="img-paragraph bode">Bode Museum</p>
                </div>
                <div id="img-mauer" class="image">
-                    <img src="./images/berlinermauer.jpeg" alt="BERLINER MAUER"
-                         class="media-object  img-responsive img-thumbnail">
-                    <p class="img-paragraph mauer">Berliner Mauer</p>
+                    <a href="./berliner_mauer.html" target="_blank">
+                         <img src="./images/berlinermauer.jpeg" alt="BERLINER MAUER"
+                              class="media-object  img-responsive img-thumbnail">
+                         <p class="img-paragraph mauer">Berliner Mauer</p>
+                    </a>
                </div>
                <div id="img-reich" class="image">
                     <img src="./images/reichstag.jpeg" alt="REICHSTAG"
@@ -187,9 +203,9 @@
                     <p class="img-paragraph reich">Reichstag</p>
                </div>
                <div id="img-tor" class="image">
-                    <img src="./images/brandemburger.jpeg" alt="Brandemburger Tor"
+                    <img src="./images/brandemburger.jpeg" alt="Brandenburger Tor"
                          class="media-object img-responsive img-thumbnail">
-                    <p class="img-paragraph tor">Brandemburger Tor</p>
+                    <p class="img-paragraph tor">Brandenburger Tor</p>
                </div>
           </div>
 
