--- a/reichstag.html
+++ b/reichstag.html
@@ -33,25 +33,30 @@
             <h1>reichstag</h1>
         </div>
         <div class="images">
-            <img class="spot_images" src="./images/pontosturisticos/reichstag1.webp" alt="">
-            <img class="spot_images" src="./images/pontosturisticos/reichstag2.jpg" alt="">
-            <img class="spot_images" src="./images/pontosturisticos/reichstag3.webp" alt="">
+            <img class="spot_images" src="./images/pontosturisticos/reichstag1.jpg" alt="">
+            <img class="spot_images" src="./images/pontosturisticos/reichstag2.webp" alt="">
+            <img class="spot_images" src="./images/pontosturisticos/reichstag3.jpg" alt="">
         </div>
         <section class="info">
             <p>
-                O antigo edifício do Reichstag é a sede do Parlamento Alemão (Deutscher Bundestag). Trata-se de um edifício histórico com
+                O antigo edifício do Reichstag é a sede do Parlamento Alemão (Deutscher Bundestag). Trata-se de um
+                edifício histórico com
                 aspecto de templo clássico, coroado por uma grande cúpula moderna pela qual se pode transitar.
-                Situado ao lado da linha que marca o Muro de Berlim, o Reichstag permaneceu quase 29 anos separado do Portão de
+                Situado ao lado da linha que marca o Muro de Berlim, o Reichstag permaneceu quase 29 anos separado do
+                Portão de
                 Brandemburgo, apesar da proximidade.
-                A construção do edifício do parlamento foi finalizada em 1894. Durante seus primeiros anos, abrigou as forças políticas
-                alemãs até que, com o fim da I Guerra Mundial, trabalhadores e soldados ocuparam o edifício e foi declarada a República de
+                A construção do edifício do parlamento foi finalizada em 1894. Durante seus primeiros anos, abrigou as
+                forças políticas
+                alemãs até que, com o fim da I Guerra Mundial, trabalhadores e soldados ocuparam o edifício e foi
+                declarada a República de
                 Weimar.
-                Depois da II Guerra Mundial, o edifício do parlamento ficou destruído e houve um intenso debate sobre sua derrubada ou
+                Depois da II Guerra Mundial, o edifício do parlamento ficou destruído e houve um intenso debate sobre
+                sua derrubada ou
                 reconstrução. Finalmente, em 1956, optaram por reconstruí-lo, embora sem refazer sua cúpula original.
             </p>
             <div class="half_section">
                 <h3> <i class="fa-solid fa-sack-dollar"></i> Preços dos ingressos:</h3>
-                <p>Gratuíto para todos</p>
+                <p>Gratuito para todos</p>
 
                 <h3> <i class="fa-solid fa-clock"></i> horário de funcionamento:</h3>
                 <p>Das 8:00 às 24:00 horas (Última entrada às 22:00 horas).</p>
@@ -59,16 +64,59 @@
                 <h3><i class="fa-solid fa-comments"></i> avaliações:</h3>
                 <div class="avaliation">
                     <div class="avaliation_img">
-                        <img class="person_img" src="./images/pontosturisticos/avaliaçao.jpg" alt="">
+                        <img class="person_img" src="./images/pontosturisticos/avaliaçãoreichstag.jpg" alt="">
                     </div>
                     <div class="avaliation_content">
                         <div class="avaliation_text">
-                        <p class="person_name">Clarice Freumann:</p>
-                        <p>O Bode museum é um dos museus que compõem a Ilha dos museus, em Berlim. Pra mim é o mais
-                            rico! Possui um acervo da idade média e da fase gótica, riquíssimo! Além de tudo, o prédio é
-                            belíssimo! Dos três museus q visitei, esse é o mais bonito!!
+                            <p class="person_name">Renato Alves:</p>
+                            <p>Após 5 e-mails, foram mais de 3 dias para realmente obter uma
+                                reserva confirmada, um descaso. Mas tirando isso, é um local com uma bela construção.
+                            </p>
+
+                            <p class="grade">
+                                Nota:
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star gray-star"></i>
+                                <i class="fa-solid fa-star gray-star"></i>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="avaliation">
+                    <div class="avaliation_img">
+                        <img class="person_img" src="./images/pontosturisticos/avaliaçãoreichstag2.jpg" alt="">
+                    </div>
+                    <div class="avaliation_content">
+                        <div class="avaliation_text">
+                            <p class="person_name">Yuri Takahashi:</p>
+                            <p>
+                                A visita ao Parlamento Alemão é imperdível. Eu e minha esposa adoramos e já queremos visitar novamente.
+                            </p>
+                            <p class="grade">
+                                Nota:
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+            <div class="avaliation">
+                <div class="avaliation_img">
+                    <img class="person_img" src="./images/pontosturisticos/gatinhoanonimo.jpeg" alt="">
+                </div>
+                <div class="avaliation_content">
+                    <div class="avaliation_text">
+                        <p class="person_name">Gatinho anônimo:</p>
+                        <p>
+                            Adorei o local, já miei muito ai... melhor lugar para fugir do meu dono e dormir em paz!! S2
                         </p>
-                        
                         <p class="grade">
                             Nota:
                             <i class="fa-solid fa-star"></i>
@@ -77,47 +125,29 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                         </p>
-                    </div></div>
+                    </div>
                 </div>
-
-                <div class="avaliation">
-                    <div class="avaliation_img">
-                        <img class="person_img" src="./images/pontosturisticos/anonimo.jpg" alt="">
-                    </div>
-                    <div class="avaliation_content">
-                        <div class="avaliation_text">
-                        <p class="person_name">Anônimo:</p>
-                        <p>
-                            Bilhete único é caro, 12 euros, mas valeu a pena com todo o acervo que o museu oferece. Não
-                            apenas as obras, o edifício é maravilhoso.
-                        </p>
-                        <p class="grade">
-                            Nota: 
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star gray-star"></i>
-                        </p>
-                    </div>
-                </div></div>
             </div>
-            
-            <div class="section_spacing"></div>
-            <div class="half_section">
-                <h3> <i class="fa-solid fa-square-poll-horizontal"></i> site oficial:</h3>
-                <p><a href="https://www.berliner-unterwelten.de/">https://www.berliner-unterwelten.de/</a></p>
-
-                <h3><i class="fa-solid fa-map-location-dot"></i> como chegar:</h3>
-                <p>Endereço: Platz der Republik 1, 11011 Berlin, Alemanha</p>
-                <p><u>Ônibus:</u> linha 100.</p>
-                <p><u>Metrô:</u> Bundestag, linha U55.</p>
-
-                <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2427.818692237092!2d13.373998515807454!3d52.518620179813865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a851c741ee506d%3A0x641b52d3abf17de5!2sPal%C3%A1cio%20do%20Reichstag!5e0!3m2!1spt-BR!2sbr!4v1647555440400!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy"></iframe>
             </div>
 
 
-        </section>
+    <div class="section_spacing"></div>
+    <div class="half_section">
+        <h3> <i class="fa-solid fa-square-poll-horizontal"></i> site oficial:</h3>
+        <p><a href="https://www.berliner-unterwelten.de/">https://www.berliner-unterwelten.de/</a></p>
+
+        <h3><i class="fa-solid fa-map-location-dot"></i> como chegar:</h3>
+        <p>Endereço: Platz der Republik 1, 11011 Berlin, Alemanha</p>
+        <p><u>Ônibus:</u> linha 100.</p>
+        <p><u>Metrô:</u> Bundestag, linha U55.</p>
+
+        <iframe class="mapa"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2427.818692237092!2d13.373998515807454!3d52.518620179813865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a851c741ee506d%3A0x641b52d3abf17de5!2sPal%C3%A1cio%20do%20Reichstag!5e0!3m2!1spt-BR!2sbr!4v1647555440400!5m2!1spt-BR!2sbr"
+            allowfullscreen="" loading="lazy"></iframe>
+    </div>
+
+
+    </section>
     </div>
 
     <img class="banner_img" src="./images/pontosturisticos/rodapé1.png" alt="">
