conteudo adicionado edit

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                                         construído no século XVIII, que foi usado como divisão de fronteiras durante a
                                         Guerra Fria.</p>
                                    <p> Berlim foi cenário para muitos
-                                        filmes e séries, como alguns exemplos temos: Adeus Lenin, de 2003;
-                                        Praia do Futuro, de 2014 (é brasileiro viu!); e sem esquecer da série que foi
-                                        usada como base para nosso site né? "O Gambito da Rainha", que lançou
+                                        filmes e séries, como alguns exemplos temos: <i>Adeus Lenin</i>, de 2003;
+                                        <i>Praia do Futuro</i>, de 2014 (é brasileiro viu!); e sem esquecer da série que foi
+                                        usada como base para nosso site né? <i>"O Gambito da Rainha"</i>, que lançou
                                         em 2020 na Netflix. Clica na setinha direita para saber mais sobre a
                                         série!</p>
 
