--- a/index.html
+++ b/index.html
@@ -185,27 +185,33 @@
           <h3>Visite os principais pontos turísticos </h3>
 
           <div class="box box_tourism">
-               <div id="img-bode" class="image">
-                    <img src="./images/bodemuseum.jpeg" alt="BODE MUSEUM"
-                         class="media-object  img-responsive img-thumbnail">
-                    <p class="img-paragraph bode">Bode Museum</p>
+               <div class="image">
+                    <a href="./bode_museum.html" target="_blank">
+                         <img src="./images/bodemuseum.jpeg" alt="BODE MUSEUM"
+                              class="media-object  img-responsive img-thumbnail">
+                         <p class="img-paragraph">Bode Museum</p>
+                    </a>
                </div>
-               <div id="img-mauer" class="image">
+               <div class="image">
                     <a href="./berliner_mauer.html" target="_blank">
                          <img src="./images/berlinermauer.jpeg" alt="BERLINER MAUER"
                               class="media-object  img-responsive img-thumbnail">
-                         <p class="img-paragraph mauer">Berliner Mauer</p>
+                         <p class="img-paragraph">Berliner Mauer</p>
                     </a>
                </div>
-               <div id="img-reich" class="image">
-                    <img src="./images/reichstag.jpeg" alt="REICHSTAG"
-                         class="media-object  img-responsive img-thumbnail">
-                    <p class="img-paragraph reich">Reichstag</p>
+               <div class="image">
+                    <a href="./reichstag.html" target="_blank">
+                         <img src="./images/reichstag.jpeg" alt="REICHSTAG"
+                              class="media-object  img-responsive img-thumbnail">
+                         <p class="img-paragraph">Reichstag</p>
+                    </a>
                </div>
-               <div id="img-tor" class="image">
-                    <img src="./images/brandemburger.jpeg" alt="Brandenburger Tor"
-                         class="media-object img-responsive img-thumbnail">
-                    <p class="img-paragraph tor">Brandenburger Tor</p>
+               <div class="image">
+                    <a href="./brandemburger_tor.html" target="_blank">
+                         <img src="./images/brandemburger.jpeg" alt="Brandenburger Tor"
+                              class="media-object img-responsive img-thumbnail">
+                         <p class="img-paragraph">Brandenburger Tor</p>
+                    </a>
                </div>
           </div>
 
