slider icons fixed

--- a/index.html
+++ b/index.html
@@ -83,40 +83,54 @@
                                         série!</p>
 
                                    <div class="berlim-infos">
+
                                         <div class="info">
-                                             <i class="fa-solid fa-people-group"></i>
                                              <div class="info-body">
-                                                  <h6>POPULAÇÃO</h6>
+                                                  <div class="info-title">
+                                                       <i class="fa-solid fa-people-group"></i>
+                                                       <h6>POPULAÇÃO</h6>
+                                                  </div>
                                                   <p>Aprox. 3,645 mi</p>
                                                   <p>(Fonte: Eurostat / 2015)</p>
                                              </div>
                                         </div>
+
                                         <div class="info">
-                                             <i class="fa-solid fa-euro-sign"></i>
                                              <div class="info-body">
-                                                  <h6>MOEDA LOCAL</h6>
-                                                  <p>(€) Euro
-                                                  </p>
+                                                  <div class="info-title">
+                                                       <i class="fa-solid fa-euro-sign"></i>
+                                                       <h6>MOEDA LOCAL</h6>
+                                                  </div>
+                                                  <p>(€) Euro</p>
                                              </div>
                                         </div>
+
                                         <div class="info">
-                                             <i class="fa-solid fa-temperature-low"></i>
                                              <div class="info-body">
-                                                  <h6>TEMPERATURA MÉDIA</h6>
+                                                  <div class="info-title">
+                                                       <i class="fa-solid fa-temperature-low"></i>
+                                                       <h6>TEMPERATURA MÉDIA</h6>
+                                                  </div>
                                                   <p>9°C</p>
                                              </div>
                                         </div>
+
                                         <div class="info">
-                                             <i class="fa-solid fa-language"></i>
                                              <div class="info-body">
-                                                  <h6>IDIOMA</h6>
+                                                  <div class="info-title">
+                                                       <i class="fa-solid fa-language"></i>
+                                                       <h6>IDIOMA</h6>
+                                                  </div>
                                                   <p>Alemão</p>
                                              </div>
                                         </div>
+
                                         <div class="info">
-                                             <i class="fa-solid fa-utensils"></i>
                                              <div class="info-body">
-                                                  <h6>GASTO ALIMENTAÇÃO</h6>
+                                                  <div class="info-title">
+                                                       <i class="fa-solid fa-utensils"></i>
+                                                       <h6>GASTO ALIMENTAÇÃO</h6>
+                                                  </div>
                                                   <p>A partir de EUR 30,00</p>
                                                   <small>Baseado em 3 refeições</small>
                                              </div>
