--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>O Gambito em Berlim</title>
-     <link rel="stylesheet" href="./css/style.css">
+     
      <link rel="shortcut icon" href="./images/favicon.png">
      <script src="https://kit.fontawesome.com/ea0e8d9cb6.js" crossorigin="anonymous"></script>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -13,6 +13,7 @@
           crossorigin="anonymous" referrerpolicy="no-referrer" />
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+          <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -65,22 +66,21 @@
                          <div class="carousel-item active">
                               <img src="./images/statistic.jpeg" class="img-carousel" alt="Poulação de Berlim">
                               <div class="carousel-caption berlim-captions d-none d-md-block">
-                                   <h5> <i class="fa-solid fa-earth-europe"></i> SOBRE BERLIM <i
-                                             class="fa-solid fa-earth-europe"></i></h5>
-                                   <p>Berlim, capital e maior cidade da Alemanha fundada no início do século XII.
-                                        É influenciada por um clima temperado sazonal. Cerca de um terço da área da
+                                   <h4> <i class="fa-solid fa-earth-europe"></i> SOBRE BERLIM <i
+                                             class="fa-solid fa-earth-europe"></i></h4>
+                                   <p>Berlim, capital e maior cidade da Alemanha foi fundada no início do século XII.
+                                        Cerca de um terço da área da
                                         cidade é composta por florestas, parques, jardins, rios e lagos.</p>
-                                   <p> Possui algumas recordações da história turbulenta da cidade, sendo
+                                   <p> Possui algumas recordações de uma história turbulenta, sendo
                                         as principais: O Memorial
-                                        do Holocausto e as ruínas do Muro de Berlim. Além do Portão de Brandemburgo
+                                        do Holocausto e as ruínas do Muro de Berlim, além do Portão de Brandemburgo
                                         construído no século XVIII, que foi usado como divisão de fronteiras durante a
                                         Guerra Fria.</p>
                                    <p> Berlim foi cenário para muitos
                                         filmes e séries, como alguns exemplos temos: <i>Adeus Lenin</i>, de 2003;
-                                        <i>Praia do Futuro</i>, de 2014 (é brasileiro viu!); e sem esquecer da série que foi
-                                        usada como base para nosso site né? <i>"O Gambito da Rainha"</i>, que lançou
-                                        em 2020 na Netflix. Clica na setinha direita para saber mais sobre a
-                                        série!</p>
+                                        <i>Praia do Futuro</i>, de 2014 (é brasileiro viu!); e sem esquecer da série
+                                         usada como base para nosso site né? <i>"O Gambito da Rainha"</i>, lançada
+                                        em 2020 na Netflix.</p>
 
                                    <div class="berlim-infos">
 
@@ -142,8 +142,8 @@
                               <img src="./images/queensGambit.jpg" class="img-carousel" alt="...">
                               <div class="carousel-caption d-none d-md-block">
                                    <div class="queensText">
-                                        <h5> <i class="fa-solid fa-chess-queen"></i> SOBRE O GAMBITO DA RAINHA <i
-                                                  class="fa-solid fa-chess-queen"></i></h5>
+                                        <h4 class="slider"> <i class="fa-solid fa-chess-queen"></i> SOBRE O GAMBITO DA RAINHA <i
+                                                  class="fa-solid fa-chess-queen"></i></h4>
                                         <p> É uma série original Netflix, foi lançada em 23 de
                                              Outubro de 2020 e conta a história de uma órfã prodígio do xadrez (Beth
                                              Harmon) que luta contra vícios enquanto enfrenta os maiores enxadristas do
