--- a/brandemburger_tor.html
+++ b/brandemburger_tor.html
@@ -24,7 +24,7 @@
                 </li>
 
             </ul>
-            <a href="#" onclick="toogleNav()"><i class="fas fa-bars" id="header-toggle"></i></a>
+            <!-- <a href="#" onclick="toogleNav()"><i class="fas fa-bars" id="header-toggle"></i></a> -->
         </nav>
     </div>
 
